package com.project.colochub.Models.Enums;

public enum HouseType {
    Apartment,
    House,
    Villa
}
