package com.project.colochub.Models.Enums;

public enum PaymentStatus {
    PENDING,
    PAID,
    CANCELED
}
