@startuml

'abstract class Actor {
'    - memberShip : UUID
'    - fullName : String
'    - memberShipDate : Date
'    - email : String
'    - password : String
'    - address : String
'}
'class Owner {
'    - picture : String
'}
'
'class Searcher {
'    - picture : String
'}
'
'class Admin {}


class Offer {
    - id : Integer
    - description : String
    - monthly_price : Real
}

class House {
    - id : Integer
    - houseType : HouseType
    - address : String
    - rooms : Integer
    - kitchen : Integer
    - bathroom : Integer
}

class Photo {
    - id : Integer
    - image : String
}

class Subscriptions {
    - paymentStatus : PaymentStatus
    - start_date :  Date
    - end_date :  Date
}


enum Role {
    Admin,
    Owner,
    Searcher
}

enum HouseType {
    Apartment,
    house,
    villa
}

enum PaymentStatus {
    PENDING,
    PAID,
    CANCELED
}

class Users {
    - id : Integer
    - username : String
    - password : String
    - role : Role
}



Users +-- Role
House +-- HouseType
Subscriptions +-- PaymentStatus
Offer "1.*" -- "1.*" Users
(Users,Offer) .. Subscriptions
House "1" o-- "1.*" Photo
Offer -- Users
Users "1" o-- "1.*" House
House "1" o-- "1" Offer
Users "1" o-- "1.*" Offer

@enduml
